cto/examples/invalid/namespace.cto.ipt
modelUnit
 namespaceDeclaration
 typeDeclaration
  enumDeclaration
   enum
   Foo
   {
   enumConstant
    o 
    BAR
   }
 <EOF>
